<resources>
    <string name="app_name">Whack-A-Mole</string>
    <string name="strwhacktitle">Whack a mole</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="strOptionsTitle">Options</string>
    <string name="strBackgroundColour">Background Colour</string>
    <string name="strHoleColour">Mole Hole Colour</string>
    <string name="strStartingLives">Starting Lives</string>
    <string name="strGiveLife">Give a Life after ? Kills</string>
    <string name="strUserName">User Name</string>
    <string name="game">Game :</string>
    <string name="version">Version :</string>
    <string name="strAboutTitle">About</string>
    <string name="strVersion">v1.0</string>
    <string name="strAuthorTitle">Author :</string>
    <string name="strAuthor">Christopher Guigue</string>
    <string name="strCompleteTitle">Completed :</string>
    <string name="strCompleted">December 14th, 2015</string>
    <string name="strCourseTitle">Course :</string>
    <string name="strCourse">Programming V</string>
    <string name="strCourNumTitle">Course # :</string>
    <string name="strCourseNum">B51</string>
    <string name="strGameDescription">The game of Whack A Mole. Hit the moles as they appear, but be sure not to miss. Have Fun!</string>
    <string name="strBtnCommit">Add New User</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string-array name="startingLives">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="bonusLives">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <string-array name="colors">
        <item>Black</item>
        <item>White</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Change Options</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gif">GifActivity</string>
    <string name="strBtnPlay">Play!</string>
    <string name="strBtnOptions">Options</string>
    <string name="strBtnHighScores">High Scores</string>
    <string name="strBtnAbout">About</string>
</resources>
